Fix crash when trying to view source while the Message Preview Pane is hidden.

BUG: 85175


svn path=/branches/KDE/3.5/kdepim/; revision=532913