kmmainwidget.cpp
@@ -2863,7 +2863,8 @@ void KMMainWidget::slotCollapseAllThreads()
 //-----------------------------------------------------------------------------
 void KMMainWidget::slotShowMsgSrc()
 {
-  mMsgView->setUpdateAttachment( false );  
+  if ( mMsgView )
+    mMsgView->setUpdateAttachment( false );  
   KMMessage *msg = mHeaders->currentMsg();
   if ( !msg )
     return;
